{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "7a1dbe75-4121-4c5f-a94a-e2e1955a1e22",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Value",
                    "id": "193d2946-5f17-4015-a7e0-f4a7bcc07ce1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CharacterChange",
                    "type": "Button",
                    "id": "30f884a3-c6d3-411e-b654-854222824a52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "52b59437-8742-4670-9bec-e578ee9481f8",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "157a1ddf-60b0-46be-899e-fcc8e34d5c4a",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "5a7a8a7d-3b89-46be-a4e2-a0e8593bb5a9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterChange",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5f7b10d3-62a8-4fe7-a8fc-a2c4dcb3a38b",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterChange",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "021d9dda-e03e-4d74-9c32-54b7ab44ab53",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterChange",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}